tests/fixtures/coflow/invalid/lex/raw-string-unclosed.cf
path = r"C:\game\assets
